[package]
name = "downloader"
version = "0.1.0"
authors = ["Protowalker <jacksonedwards6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = {version = "0.8.0", features = ["macros"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = {version = "0.10.7", features = ["json", "blocking"]}
sha1 = {version = "0.6.0", features = ["std"]}
url = {version = "2.1.1"}
rayon = "1.1"
clap = "2.33.3"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 3
